--- a/resources/views/index/product.twig
+++ b/resources/views/index/product.twig
@@ -697,6 +697,7 @@
         var quantity = $(this).prev(".pro-qty").find("input").val();
         $.get("/api/basket/create", { variationId: $(this).data("variationid"), quantity: quantity }, function(response)
         {
+            response = JSON.parse(response);
             if (response.code == 1)
             {
                 $("#cart-num").text(parseInt($("#cart-num").text()) + quantity);
@@ -721,6 +722,7 @@
     {
         $.get("/api/wishlist/delete/" + $(this).data("id"), function(response)
         {
+            response = JSON.parse(response);
             if (response.code == 1)
             {
                 var tmp = '<a href="#" id="add_to_wishlist" data-id="{{item.variationId}}"><i class="fa fa-heart"></i>{{trans("Plentymarket::WebIndexProduct.add_to_wishlist")}}</a>';
@@ -734,6 +736,7 @@
     {
         $.get("/api/wishlist/create/" + $(this).data("id"), function(response)
         {
+            response = JSON.parse(response);
             if (response.code == 1)
             {
                 var tmp = '<a href="#" id="remove_from_wishlist" data-id="{{item.variationId}}"><i class="fa fa-trash-o"></i>{{trans("Plentymarket::WebIndexProduct.remove_from_wishlist")}}</a>';
