--- a/resources/views/common/header.twig
+++ b/resources/views/common/header.twig
@@ -172,7 +172,7 @@
 						<!--=======  single icon  =======-->
 
 						<div class="single-icon">
-							<a href="/account/cart" id="cart-icon">
+							<a href="javascript:void(0)" id="cart-icon">
 								<i class="lnr lnr-cart"></i>
 								<span class="text">{{trans('Plentymarket::Common.my_cart')}}</span>
 								<span class="count" id="cart-num">0</span>
