--- a/resources/views/common/header.twig
+++ b/resources/views/common/header.twig
@@ -180,41 +180,15 @@
 							<!-- cart floating box -->
 							<div class="cart-floating-box hidden" id="cart-floating-box">
 								<div class="cart-items">
-									<div class="cart-float-single-item d-flex">
-                                        <span class="remove-item" id="remove-item"><a href="#"><i
-			                                        class="fa fa-times"></i></a></span>
-										<div class="cart-float-single-item-image">
-											<a href="single-product.html"><img
-													src="{{plugin_path("Plentymarket")}}/images/products/product01.jpg"
-													class="img-fluid" alt=""></a>
-										</div>
-										<div class="cart-float-single-item-desc">
-											<p class="product-title"><a href="single-product.html">Duis pulvinar obortis
-													eleifend </a></p>
-											<p class="price"><span class="quantity">1 x</span> $20.50</p>
-										</div>
-									</div>
-									<div class="cart-float-single-item d-flex">
-										<span class="remove-item"><a href="#"><i class="fa fa-times"></i></a></span>
-										<div class="cart-float-single-item-image">
-											<a href="single-product.html"><img
-													src="{{plugin_path("Plentymarket")}}/images/products/product02.jpg"
-													class="img-fluid" alt=""></a>
-										</div>
-										<div class="cart-float-single-item-desc">
-											<p class="product-title"><a href="single-product.html">Fusce ultricies dolor
-													vitae</a></p>
-											<p class="price"><span class="quantity">1 x</span> $20.50</p>
-										</div>
-									</div>
+
 								</div>
 								<div class="cart-calculation">
 									<div class="calculation-details">
-										<p class="total">Subtotal <span>$22</span></p>
+										<p class="total">Subtotal <span id="basket_total_price">0</span></p>
 									</div>
 									<div class="floating-cart-btn text-center">
-										<a class="floating-cart-btn" href="checkout.html">Checkout</a>
-										<a class="floating-cart-btn" href="cart.html">View Cart</a>
+										<a class="floating-cart-btn" href="/account/checkout">{{trans('Plentymarket::Common.checkout')}}</a>
+										<a class="floating-cart-btn" href="/account/cart">{{trans('Plentymarket::Common.view_cart')}}</a>
 									</div>
 								</div>
 							</div>
@@ -418,3 +392,25 @@
 </div>
 
 <!--=====  End of Header One  ======-->
+<script type="text/html">
+	<div class="cart-float-single-item d-flex">
+		<span class="remove-item" data-id="[basketItemId]">
+			<a href="#">
+				<i class="fa fa-times"></i>
+			</a>
+		</span>
+		<div class="cart-float-single-item-image">
+			<a href="/index/product/[variationId]">
+				<img src="[image]" class="img-fluid" alt="">
+			</a>
+		</div>
+		<div class="cart-float-single-item-desc">
+			<p class="product-title">
+				<a href="/index/product/[variationId]">
+					[name]
+				</a>
+			</p>
+			<p class="price"><span class="quantity">[quantity] x</span> [format_discount_price]</p>
+		</div>
+	</div>
+</script>
