--- a/resources/views/common/header.twig
+++ b/resources/views/common/header.twig
@@ -392,7 +392,7 @@
 </div>
 
 <!--=====  End of Header One  ======-->
-<script type="text/html">
+<script type="text/html" id="basket_item_tpl">
 	<div class="cart-float-single-item d-flex">
 		<span class="remove-item" data-id="[basketItemId]">
 			<a href="#">
