--- a/resources/views/account/cart.twig
+++ b/resources/views/account/cart.twig
@@ -127,14 +127,14 @@
 						<!--=======  Discount Coupon  =======-->
 
 						<div class="discount-coupon">
-							<h4>Discount Coupon Code</h4>
+							<h4>{{trans('Plentymarket::WebAccountCart.discount_coupon_code')}}</h4>
 							<form action="#">
 								<div class="row">
 									<div class="col-md-6 col-12 mb-25">
-										<input type="text" placeholder="Coupon Code">
+										<input type="text" placeholder="{{trans('Plentymarket::WebAccountCart.coupon_code')}}">
 									</div>
 									<div class="col-md-6 col-12 mb-25">
-										<input type="submit" value="Apply Code">
+										<input type="submit" value="{{trans('Plentymarket::WebAccountCart.apply_code')}}">
 									</div>
 								</div>
 							</form>
