--- a/resources/views/common/header.twig
+++ b/resources/views/common/header.twig
@@ -160,7 +160,7 @@
 						<!--=======  single icon  =======-->
 
 						<div class="single-icon mr-20">
-							<a href="wishlist.html">
+							<a href="/account/wishlist">
 								<i class="lnr lnr-heart"></i>
 								<span class="text">{{trans('Plentymarket::Common.wishlist')}}</span>
 								<span class="count" id="wishlist-num">0</span>
