--- a/resources/views/index/product.twig
+++ b/resources/views/index/product.twig
@@ -700,7 +700,8 @@
             name: '{{item.name}}',
             image: '{{item.images.0}}',
             format_discount_price: '{{item.format_discount_price}}',
-            variationId:{{item.id}}
+            discount_price: '{{item.discount_price}}',
+            variationId:{{item.variationId}},
         }, function(success)
         {
             if (success)
