--- a/resources/views/account/cart.twig
+++ b/resources/views/account/cart.twig
@@ -116,15 +116,15 @@
 
 						<div class="cart-summary">
 							<div class="cart-summary-wrap">
-								<h4>{{trans('Plentymarket.WebAccountCart.cart_summary')}}</h4>
-								<p>{{trans('Plentymarket.WebAccountCart.sub_total')}}<span>{{total}}</span></p>
-								<p>{{trans('Plentymarket.WebAccountCart.vat')}}<span>{{vat}}</span></p>
-								<p>{{trans('Plentymarket.WebAccountCart.shipping_cost')}}<span>{{ship}}</span></p>
-								<h2>{{trans('Plentymarket.WebAccountCart.grand_total')}} <span>{{summary}}</span></h2>
+								<h4>{{trans('Plentymarket::WebAccountCart.cart_summary')}}</h4>
+								<p>{{trans('Plentymarket::WebAccountCart.sub_total')}}<span>{{total}}</span></p>
+								<p>{{trans('Plentymarket::WebAccountCart.vat')}}<span>{{vat}}</span></p>
+								<p>{{trans('Plentymarket::WebAccountCart.shipping_cost')}}<span>{{ship}}</span></p>
+								<h2>{{trans('Plentymarket::WebAccountCart.grand_total')}} <span>{{summary}}</span></h2>
 							</div>
 							<div class="cart-summary-button">
-								<button class="checkout-btn">{{trans('Plentymarket.WebAccountCart.checkout')}}</button>
-								<button class="update-btn">{{trans('Plentymarket.WebAccountCart.update_cart')}}</button>
+								<button class="checkout-btn">{{trans('Plentymarket::WebAccountCart.checkout')}}</button>
+								<button class="update-btn">{{trans('Plentymarket::WebAccountCart.update_cart')}}</button>
 							</div>
 						</div>
 
