--- a/resources/views/account/cart.twig
+++ b/resources/views/account/cart.twig
@@ -162,7 +162,7 @@
             }
         });
     };
-
+    loadState($("#country").val());
     $("#country").on("change", function()
     {
         loadState($(this).val());
