--- a/resources/views/account/cart.twig
+++ b/resources/views/account/cart.twig
@@ -151,7 +151,7 @@
         {
             $.each(response.data, function(key, value)
             {
-                if (value.id == country_id)
+                if (value.country_id == country_id)
                 {
                     $.each(value.state, function(k, v)
                     {
