--- a/resources/views/account/cart.twig
+++ b/resources/views/account/cart.twig
@@ -156,6 +156,7 @@
                     $("#state").append("<option value=\"" + value.id + "\">" + value.name + "</option>");
                 }
             });
+            $("#state").niceSelect("update");
         });
     };
     loadState($("#country").val());
