--- a/resources/views/account/cart.twig
+++ b/resources/views/account/cart.twig
@@ -149,6 +149,7 @@
         $("#state").empty();
         $.get("/api/index/state", { country_id: country_id }, function(response)
         {
+            response = JSON.parse(response);
             $.each(response.data, function(key, value)
             {
                 if (value.country_id == country_id)
