--- a/resources/views/account/cart.twig
+++ b/resources/views/account/cart.twig
@@ -152,7 +152,23 @@
         return false;
     });
 
-    var cart = JSON.parse('{{virtual_cart}}');
+    function htmlRestore(str)
+    {
+        var s = "";
+        if (str.length === 0)
+        {
+            return "";
+        }
+        s = str.replace(/&amp;/g, "&");
+        s = s.replace(/&lt;/g, "<");
+        s = s.replace(/&gt;/g, ">");
+        s = s.replace(/&nbsp;/g, " ");
+        s = s.replace(/&#39;/g, "\'");
+        s = s.replace(/&quot;/g, "\"");
+        return s;
+    }
+
+    var cart = JSON.parse(htmlRestore('{{virtual_cart}}'));
 
     $(".pro-qty input").on("change", function()
     {
