--- a/resources/views/account/cart.twig
+++ b/resources/views/account/cart.twig
@@ -35,7 +35,7 @@
 									<td class="pro-price"><span>{{item.format_discount_price}}</span></td>
 									<td class="pro-vat"><span>{{item.vat_price}}</span></td>
 									<td class="pro-quantity">
-										<div class="pro-qty" data-id="{{item.id}}">
+										<div class="pro-qty" data-id="{{item.basketItemId}}">
 											<input type="text" value="{{item.quantity}}" min="{{item.min_num}}" max="{{item.stock}}">
 										</div>
 									</td>
