--- a/resources/views/common/footer.twig
+++ b/resources/views/common/footer.twig
@@ -219,10 +219,10 @@
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 
 <!-- Popper JS -->
-<script src="https://cdn.bootcss.com/popper.js/1.16.1/popper.min.js"></script>
+<script src="{{plugin_path("Plentymarket")}}/js/popper.min.js"></script>
 
 <!-- Bootstrap JS -->
-<script src="https://cdn.bootcss.com/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script src="{{plugin_path("Plentymarket")}}/js/bootstrap.min.js"></script>
 
 <!-- Plugins JS -->
 <script src="{{plugin_path("Plentymarket")}}/js/plugins.js"></script>
